--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -130,6 +130,7 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Автосалон</h1>
                 <p class="lead text-muted">Мы предлагаем широкий выбор авто и комплектующих к ним.</p>
+                <p>РБ, Гомельская обл., г.Речица   Продавец: Белый И.В.</p>
                 <p>
                     <a href="/cars" class="btn btn-primary my-2">Просмотр автомобилей</a>
                     <a href="/addCar" class="btn btn-secondary my-2">Добавить автомобиль</a>
