--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.101.0">
     <meta http-equiv="Refresh" content="1">
-    <title>Album example · Bootstrap v5.2</title>
+    <title>Автосалон · тестовый интернет-магазин  Версия 1.0</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/album/">
 
